--- a/public/search/index.html
+++ b/public/search/index.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="author" content="map[avatar:img/personal/avatar.png name:AiEDU]" />
+<meta name="author" content="AiEDU" />
 <meta name="description" content="Just do it!" />
 
 
@@ -351,7 +351,7 @@ x-data="{
             <span x-text="post.item.author"></span>
             </template>
             <template x-if="!post.item.author">
-            <span>map[avatar:img/personal/avatar.png name:AiEDU]</span>
+            <span>AiEDU</span>
             </template>
             </span>
           </div>
