--- a/public/404.html
+++ b/public/404.html
@@ -18,7 +18,7 @@
 
 
 
-<meta name="author" content="map[avatar:img/personal/avatar.png name:AiEDU]" />
+<meta name="author" content="AiEDU" />
 <meta name="description" content="Just do it!" />
 
 
