--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"
+<html lang="zh-cn"
   x-data
   :class="$store.darkMode.class()"
   :data-theme="$store.darkMode.theme()">
@@ -30,7 +30,7 @@
   <meta property="og:site_name" content="AiEDU | Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Just do it!">
-  <meta property="og:locale" content="en_us">
+  <meta property="og:locale" content="zh_cn">
   <meta property="og:type" content="website">
     <meta property="og:image" content="https://googhub.nyc.mn/img/global-background.jpg">
 
